Fix the alignment of the SectionView titles

--- a/src/platform-implementation-js/style/gmail.css
+++ b/src/platform-implementation-js/style/gmail.css
@@ -1806,6 +1806,7 @@ body:not(.inboxsdk__gmailv1css) .inboxsdk__resultsSection.inboxsdk__resultsSecti
 }
 body:not(.inboxsdk__gmailv1css) .inboxsdk__resultsSection_title {
   display: flex;
+  align-items: center;
   height: 48px;
 }
 
